--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-./idea/
-.iml
-./out/
+/.idea/
+*.iml
+/out/
 
 ### Eclipse ###
 .apt_generated
@@ -30,3 +30,4 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
